# AUTO-MAS

./: .cnb.yml  .gitignore  AGENTS.md  API_CONFIG_REFACTOR.md  CONTRIBUTING.md  README.md  SECURITY.md  TaskManager_WebSocket_Implementation.md  dev.md  export_openapi.py  interface.json  main.py  mirror.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  updater.py  websocket_force_test.html  websocket_test.html
.cnb/: web_trigger.yml
.github/: copilot-instructions.md
.github/workflows/: build-app.yml  ci.yml  cnb_release.py  cnb_trigger.py  github_download_and_cnb_upload.py  mirrorchyan-auto_mas.yml  mirrorchyan.yml  (+6 more)
app/: __init__.py
dev/: maaend-monitor.html
docs/: Backend_Task_Scheduling_and_WebSocket_Messages.md  Emulator_Path_Auto_Search.md  MAA_Current_Status.md  MAA_Quick_Guide.md  MAA_Refactoring_Guide.md  MAA_Refactoring_Summary.md  TaskInfo_Usage_Example.md  subprocess_stdin_comparison.md  useWebSocket_API_Reference.md  useWebSocket_Analysis.md
docs-AI/: maaend-adaptation-issue-breakdown.md  maaend-adaptation-plan-v2.md  not-found-hotfix-2026-03-02.md
frontend/: .env  .env.development  .gitignore  README.md  biome.json  electron-builder-full.json  electron-builder-lite.json  eslint.config.js  eslint.config.mjs  index.html  openapi-ts.config.mjs  openapi.json  package.json  tsconfig.app.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
mas/: __init__.py  plugin_config.py  plugins.py
plugins/: AUTO_MAS.json
res/: version.json
scripts/: __init__.py  dev_stub_generator.py  plugin_tool.py
(+853 files in other folders)
