[project]
name = "AUTO-MAS"
version = "4.0.0.1"
description = "AUTO-MAS: A Multi-Script, Multi-Config Management and Automation Software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru==0.7.3",
    "fastapi==0.116.1",
    "pydantic==2.11.7",
    "uvicorn==0.35.0",
    "websockets==15.0.1",
    "aiofiles==24.1.0",
    "aiohttp==3.12.15",
    "httpx[socks]==0.28.1",
    "gitpython==3.1.45",
    "plyer==2.1.0",
    "psutil==7.0.0",
    "jinja2==3.1.6",
    "pywin32==310",
    "keyboard==0.13.5",
    "pycryptodome==3.23.0
    "truststore==0.10.1",
    "pillow==11.3.0",
    "packaging==25.0",
]
